test/expected/declare_uf.out
declare x as unsigned float
        ^
9: error: "unsigned float" is illegal for built-in type
